Fixing gaps

--- a/src/LandingPage.module.scss
+++ b/src/LandingPage.module.scss
@@ -1,6 +1,15 @@
 html {
   scroll-behavior: smooth;
 }
+html {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll; 
+}
+
+html::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
 .container {
   margin: 0;
   padding: 0;
