--- a/src/components/blogIntegration/blogIntegration.module.scss
+++ b/src/components/blogIntegration/blogIntegration.module.scss
@@ -28,7 +28,7 @@
         justify-content: space-evenly;
         align-items: center;
         flex-wrap: wrap;
-        gap:20px;
+        gap:50px;
         @media screen and (max-width: 768px) {
             flex-direction: column;
             gap: 20px;
