--- a/src/components/molecules/blogCard/blogCard.module.scss
+++ b/src/components/molecules/blogCard/blogCard.module.scss
@@ -28,6 +28,7 @@ a{
   img {
     width:413px;
     height: 180px;
+    border-radius: 12px 12px 0px 0px;
   }
 }
 
