--- a/src/components/molecules/talkToUsButton/TalkToUsButton.module.scss
+++ b/src/components/molecules/talkToUsButton/TalkToUsButton.module.scss
@@ -6,6 +6,7 @@
   padding: 12px 32px;
   width: 200px;
   height: 48px;
+  cursor: pointer;
   background: linear-gradient(
     102.98deg,
     #ffac66 0%,
